add maven-surefire-plugin for testing,remove Spongy Castle, update kryo to 5.0.4, remove junit-jupiter